# wyrd

./: .mcp.json  Cargo.toml  LICENSE-MIT  README.md
.claude/skills/wyrd-debug/: SKILL.md
docs/: RELEASING.md
examples/axum/: Cargo.toml
examples/axum/src/: main.rs
examples/demo/: Cargo.toml
examples/demo/src/: main.rs
examples/demo/tests/: deadlock.rs
wyrd-cli/: Cargo.toml  README.md
wyrd-cli/src/: follow.rs  hunt.rs  main.rs  render.rs  tui.rs  watch.rs
wyrd-core/: Cargo.toml  README.md
wyrd-core/src/: diff.rs  error.rs  ingest.rs  latency.rs  lib.rs  lint.rs  model.rs  predict.rs  query.rs
wyrd-core/tests/: diff.rs  latency.rs  lint.rs  predict.rs  queries.rs
wyrd-mcp/: Cargo.toml  README.md
wyrd-mcp/src/: lib.rs  main.rs
wyrd-mcp/tests/: server.rs
wyrd-shim/: Cargo.toml  README.md
wyrd-shim/examples/: deadlock.rs  inversion.rs
wyrd-shim/src/: chaos.rs  lib.rs  mpsc.rs  notify.rs  oneshot.rs  rwlock.rs  semaphore.rs  sync.rs
wyrd-shim/tests/: backpressure_stable.rs  deadlock_stable.rs  notify_stable.rs  oneshot_stable.rs  predict_stable.rs  rwlock_stable.rs  semaphore_stable.rs
wyrd-shim/tests/common/: mod.rs
wyrd-weave/: Cargo.toml  README.md
wyrd-weave/examples/: dump.rs
wyrd-weave/src/: error.rs  event.rs  format.rs  layer.rs  lib.rs  recorder.rs  writer.rs
