[package]
name = "wyrd-cli"
description = "the `wyrd` CLI: why-blocked and stats over recordings"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["tokio", "async", "deadlock", "debugging", "cli"]
categories = ["command-line-utilities", "development-tools::debugging", "asynchronous"]

[[bin]]
name = "wyrd"
path = "src/main.rs"

[dependencies]
wyrd-core.workspace = true
wyrd-weave.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
clap.workspace = true
ratatui = "0.29"
