[package]
name = "wyrd-core"
description = "ingest wyrd recordings into SQLite and answer causality queries (world-state fold, why-blocked)"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["tokio", "async", "deadlock", "sqlite", "causality"]
categories = ["asynchronous", "development-tools::debugging"]

[dependencies]
wyrd-weave.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
rusqlite.workspace = true
tracing = { workspace = true, optional = true }

[features]
diag = ["dep:tracing"]

[dev-dependencies]
