[package]
name = "wyrd-shim"
description = "stable-Rust tokio wrappers (spawn/Mutex/mpsc) that record wyrd causality events without tokio_unstable"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
wyrd-weave.workspace = true
thiserror.workspace = true
pin-project-lite = "0.2"
tokio = { version = "1.52", features = ["rt", "rt-multi-thread", "sync", "time", "macros"] }

[dev-dependencies]
wyrd-core.workspace = true
