[package]
name = "wyrd-demo"
description = "a tokio app exercising spawn trees, mutex contention, mpsc backpressure and a deadlock"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "wyrd-demo"
path = "src/main.rs"

[dependencies]
wyrd-weave.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true

[dev-dependencies]
wyrd-core.workspace = true

# `tokio_unstable` is set via RUSTFLAGS to unlock tokio's tracing spans and the
# named-task API; declare it so cfg-checking stays quiet.
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tokio_unstable)'] }
